Add build/transpile dependencies

--- a/package.json
+++ b/package.json
@@ -29,5 +29,11 @@
   "bugs": {
     "url": "https://github.com/znti/react-language-kit/issues"
   },
-  "homepage": "https://github.com/znti/react-language-kit#readme"
+  "homepage": "https://github.com/znti/react-language-kit#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3"
+  }
 }
