Add peerDependencies and build command

--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "react-language-kit",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A React internationalization (i18n) helper with minimal footprint and ease of usage",
-  "main": "src/index.js",
-  "dependencies": {
-    "react": "^16.8",
-    "react-dom": "^16.8"
-  },
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+		"build": "./node_modules/.bin/babel src --out-file index.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +27,10 @@
     "url": "https://github.com/znti/react-language-kit/issues"
   },
   "homepage": "https://github.com/znti/react-language-kit#readme",
+  "peerDependencies": {
+    "react": "^16.8",
+    "react-dom": "^16.8"
+  },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
