--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "react-language-kit",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "A React internationalization (i18n) helper with minimal footprint and ease of usage",
   "main": "react-language-kit.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "react-scripts start",
     "build": "./node_modules/.bin/babel src/react-language-kit --out-file react-language-kit.js"
   },
@@ -37,6 +36,12 @@
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
@@ -55,5 +60,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "intl-messageformat": "^7.3.3"
   }
 }
